made the pom self sufficient after removal of adeptj-parent